--- a/template/index.html
+++ b/template/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  {{STATE}}
+  <title>Vue SSR</title>
+  <link href="/icon/favicon.png" rel="icon">
+  <link href="/icon/favicon.png" rel="apple-touch-icon">
 </head>
 
 <body>
-  <div id="app">{{APP}}</div>
+  <!--vue-ssr-outlet-->
 </body>
 
 </html>
